--- a/voir/index.htm
+++ b/voir/index.htm
@@ -1,23 +1,24 @@
+<!DOCTYPE html>
+<html>
+	<head>
+    	<meta charset="UTF-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+		<title>Московская Городская Организация ВОИР</title>
+		<meta name="Keywords" content="воир, всероссийское, общество, изобретателей, рационализаторов, московская, городская, организация, выставки, патент, менеджмент, идеи бизнеса, бизнес, управление, роспатент, выставки москвы, инновации, авторское право, новинки, новые технологии, инновационный менеджмент, изобретения, товарный знак, бренд, реестр,  интеллектуальная собственность, торговая марка, бизнес идеи, брэнд, логотип, открытия, ноу хау, ноу-хау, инновационная деятельность, лицензирование, международные выставки, инновационные проекты, инновационные технологии, патент на изобретение"> 
+		<meta name="Description" content="Сайт Московской Городской Организации Всероссийского Общества Изобретателей и Рационализаторов">
 
-<!-- saved from url=(0022)http://www.mosvoir.ru/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><title>Московская Городская Организация ВОИР</title>
-
-<meta name="Keywords" content="воир, всероссийское, общество, изобретателей, рационализаторов, московская, городская, организация, выставки, патент, менеджмент, идеи бизнеса, бизнес, управление, роспатент, выставки москвы, инновации, авторское право, новинки, новые технологии, инновационный менеджмент, изобретения, товарный знак, бренд, реестр,  интеллектуальная собственность, торговая марка, бизнес идеи, брэнд, логотип, открытия, ноу хау, ноу-хау, инновационная деятельность, лицензирование, международные выставки, инновационные проекты, инновационные технологии, патент на изобретение"> 
-<meta name="Description" content="Сайт Московской Городской Организации Всероссийского Общества Изобретателей и Рационализаторов">
-
-<meta http-equiv="Content-Language" content="ru">
-<meta name="home_url" content="http://www.mosvoir.ru">            
-<meta http-equiv="robots" content="ALL">
-<meta content="INDEX,FOLLOW" name="ROBOTS">
-
-<style type="text/css">
-<!--
-A.menu {COLOR: #143270; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 10; TEXT-DECORATION: none;}
-A.menu:visited {COLOR: #143270; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 10; TEXT-DECORATION: none;}
-A.menu:hover {COLOR: #0053ff; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 12; TEXT-DECORATION: none;}
-A.menu:active {COLOR: #0053ff; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 12; TEXT-DECORATION: none;}
--->
-</style>
+		<meta http-equiv="Content-Language" content="ru">
+		<meta name="home_url" content="http://www.mosvoir.ru">            
+		<meta http-equiv="robots" content="ALL">
+		<meta content="INDEX,FOLLOW" name="ROBOTS">
+		<style type="text/css">
+		<!--
+		A.menu {COLOR: #143270; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 10; TEXT-DECORATION: none;}
+		A.menu:visited {COLOR: #143270; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 10; TEXT-DECORATION: none;}
+		A.menu:hover {COLOR: #0053ff; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 12; TEXT-DECORATION: none;}
+		A.menu:active {COLOR: #0053ff; FONT-FAMILY: Tahoma; FONT-WEIGHT: bold; FONT-SIZE: 12; TEXT-DECORATION: none;}
+		-->
+		</style>
 
 <link rel="stylesheet" href="./index_files/bg1.css" type="text/css">
 <link href="./index_files/style.css" rel="stylesheet" type="text/css">
@@ -42,7 +43,8 @@ function preload() {
   }
 }
 //-->
-</script></head>
+</script>
+	</head>
 
 
 
