--- a/index.html
+++ b/index.html
@@ -1,50 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-  <div class="chat">
-    <div class="chat-title">
-      <h1>Георгий Бородин</h1>
-      <h2 class="chat-status" data-online="в сети" data-offline="не в сети">не в сети</h2>
-      <figure class="avatar">
-        <img src="./i/profile-80.jpg">
-      </figure>
-    </div>
-    <div class="messages">
-      <div class="messages-templates">
-        <div class="message loading">
-          <figure class="avatar"><img src="./i/profile-80.jpg" /></figure>
+<html lang="ru">
+  <head>
+    <title>UI</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/styles.css">
+  </head>
+
+  <body>
+    <div class="wrap app" data-state="initial">
+      <ul class="menu">
+        <li class="menu__item drag"></li>
+
+        <li class="menu__item burger">
+          <i class="burger-icon"></i>
+        </li>
+
+        <li class="menu__item mode new">
+          <i class="menu__icon new-icon"></i>
+          <span class="menu__item-title">Загрузить<br>новое</span>
+        </li>
+
+        <li class="menu__item mode comments" data-state="">
+          <i class="menu__icon comments-icon"></i>
+          <span class="menu__item-title">Комментарии</span>
+        </li>
+        <li class="menu__item tool comments-tools">
+          <span class="menu__toggle-bg">
+            <input class="menu__toggle" type="radio" name="toggle" value="on" id="comments-on" checked><label class="menu__toggle-title menu__toggle-title_on" for="comments-on">Показать<br>комментарии</label>
+            <input class="menu__toggle" type="radio" name="toggle" value="off" id="comments-off"><label class="menu__toggle-title menu__toggle-title_off" for="comments-off">Скрыть<br>комментарии</label>
+            <span class="menu__toggle-bttn"></span>
+          </span>
+        </li>
+
+        <li class="menu__item mode draw" data-state="">
+          <i class="menu__icon draw-icon"></i>
+          <span class="menu__item-title">Рисовать</span>
+        </li>
+        <li class="menu__item tool draw-tools">
+          <input class="menu__color red" type="radio" name="color" value="red"><span></span>
+          <input class="menu__color yellow" type="radio" name="color" value="yellow"><span></span>
+          <input class="menu__color green" type="radio" name="color" value="green" checked><span></span>
+          <input class="menu__color blue" type="radio" name="color" value="blue"><span></span>
+          <input class="menu__color purple" type="radio" name="color" value="purple"><span></span>
+        </li>
+
+        <li class="menu__item mode share" data-state="">
+          <i class="menu__icon share-icon"></i>
+          <span class="menu__item-title">Поделиться</span>
+        </li>
+        <li class="menu__item tool share-tools">
+            <input class="menu__url" type="text" value="http://2mlfg4vp">
+            <input class="menu_copy" type="button" value="Копировать">
+        </li>
+      </ul>
+
+      <img class="current-image" src="./pic/image.jpg">
+      
+      <div class="error hidden">
+        <h4 class="error__header">Ошибка</h4>
+        <p class="error__message">Неверный формат файла. Пожалуйста, выберите изображение в формате .jpg или .png.</p>
+      </div>
+      
+      <div class="image-loader" style="display: none;">
+        <div class="loader">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
           <span></span>
         </div>
-        <div class="message">
-          <figure class="avatar"><img src="./i/profile-80.jpg" /></figure>
-          <span class="message-text">Привет!</span>
-          <div class="timestamp">12:56</div>
-        </div>
-        <div class="message message-personal">
-          <span class="message-text">Привет</span>
-          <div class="timestamp">12:56</div>
-        </div>
-        <div class="message message-status">
-          <span class="message-text">Пользователь не в сети</span>
-        </div>
-      </div>
-      <div class="messages-content">
+        <p class="image-loader__message">Загружаю изображение...</p>
       </div>
     </div>
-    <form class="message-box" action="/404/" method="POST">
-      <input type="text" class="message-input" placeholder="Ваше сообщение …">
-      <button disabled type="submit" class="message-submit">Отправить</button>
-    </form>
+  </body>
 
-  </div>
-  <div class="bg"></div>
-  <script src="./js/chat.js"></script>
-</body>
+  <script src="./js/solution.js"></script>
+
 </html>
