--- a/books/index.html
+++ b/books/index.html
@@ -49,7 +49,10 @@
             </form>
         </section>
 
-        <section class="footer"></section>
+        <section class="footer">
+            <p class="footer-title">Dremuchev Andrey (2018)</p>
+            <p class="footer-title">books info from "Labirint.ru"</p>
+        </section>
     </div>
     <script type="text/javascript" src="./js/index.js"></script>
 </body>
