--- a/books/index.html
+++ b/books/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="book-form-input-wrapper">
                         <label class="book-form-input-label label-publish" for="input-publish">Год</label>
-                        <input id="input-publish" class="book-form-input" type="text" placeholder="ГГГГ">
+                        <input id="input-publish" class="book-form-input" type="number" placeholder="ГГГГ">
                     </div>
                     <div class="book-form-input-wrapper">
                         <label class="book-form-input-label label-pic" for="input-pic">Изображение</label>
