--- a/books/index.html
+++ b/books/index.html
@@ -52,8 +52,10 @@
         <section class="footer">
             <p class="footer-title">Dremuchev Andrey (2018)</p>
             <p class="footer-title">books info from "Labirint.ru"</p>
+            <img id="scroll" class="to-down" src="./src/up.png" alt="Наверх">
         </section>
     </div>
     <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/smooth-scroll.js"></script>
 </body>
 </html>
