--- a/books/index.html
+++ b/books/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./src/books.js"></script>
 </head>
 <body>
+    <canvas id="wall"></canvas>
     <div class="main-wrapper">
         <section class="header">
             <div class="header-wrapper">
@@ -57,5 +58,6 @@
     </div>
     <script type="text/javascript" src="./js/index.js"></script>
     <script type="text/javascript" src="./js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="./js/aniback.js"></script>
 </body>
 </html>
